RESOLVED FIXED126367
RenderScrollbar: Map of scrollbar parts should use RenderPtr.
https://bugs.webkit.org/show_bug.cgi?id=126367
Summary RenderScrollbar: Map of scrollbar parts should use RenderPtr.
Andreas Kling
Reported 2014-01-01 16:01:39 PST
RenderScrollbar: Map of scrollbar parts should use RenderPtr.
Attachments
Patch (7.77 KB, patch)
2014-01-01 16:29 PST, Andreas Kling
koivisto: review+
Andreas Kling
Comment 1 2014-01-01 16:29:28 PST
WebKit Commit Bot
Comment 2 2014-01-01 16:30:12 PST
Attachment 220197 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/rendering/RenderPtr.h', u'Source/WebCore/rendering/RenderScrollbar.cpp', u'Source/WebCore/rendering/RenderScrollbar.h', '--commit-queue']" exit_code: 1 ERROR: Source/WebCore/rendering/RenderScrollbar.h:30: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 3 2014-01-01 16:39:15 PST
Comment on attachment 220197 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=220197&action=review > Source/WebCore/rendering/RenderPtr.h:165 > +template<typename T> struct HashTraits<WebCore::RenderPtr<T>> : SimpleClassHashTraits<WebCore::RenderPtr<T>> { Might be nice to have SmartPointerHashTraits in WTF to make these copy-pastes smaller.
Andreas Kling
Comment 4 2014-01-01 16:49:17 PST
Note You need to log in before you can comment on or make changes to this bug.